--- a/VsCode/LanguageServer/LanguageServer.csproj
+++ b/VsCode/LanguageServer/LanguageServer.csproj
@@ -9,4 +9,8 @@
     <OutputPath>../fryscript/bin</OutputPath>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
+  </ItemGroup>
+
 </Project>
