--- a/VsCode/fryscript/package.json
+++ b/VsCode/fryscript/package.json
@@ -37,8 +37,11 @@
         ]
     },
     "scripts": {
-        "compile": "tsc -b",
-        "watch": "tsc -b -w"
+        "vscode:prepublish": "tsc -p ./",
+        "compile": "tsc -p ./",
+        "watch": "tsc -w -p ./",
+        "update-vscode": "node ./node_modules/vscode/bin/install",
+        "postinstall": "node ./node_modules/vscode/bin/install"
     },
     "devDependencies": {
         "@types/node": "^10.12.10",
