--- a/VsCode/LanguageServer/LanguageServer.csproj
+++ b/VsCode/LanguageServer/LanguageServer.csproj
@@ -10,8 +10,14 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="FryScript" Version="0.0.0" />
+    <PackageReference Include="Irony.NetCore" Version="1.0.11" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="FryScript">
+      <HintPath>..\..\..\FryScript\FryScript\FryScript\bin\Debug\netstandard2.0\FryScript.dll</HintPath>
+    </Reference>
   </ItemGroup>
 
 </Project>
