--- a/FryScript.VsCode/FryScript.VsCode.LanguageServer/FryScript.VsCode.LanguageServer.csproj
+++ b/FryScript.VsCode/FryScript.VsCode.LanguageServer/FryScript.VsCode.LanguageServer.csproj
@@ -12,4 +12,8 @@
     <WarningsAsErrors />
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+  </ItemGroup>
+
 </Project>
