Initial wiring up of server, no tests sa of yet

--- a/FryScript.VsCode/FryScript.VsCode.LanguageServer/FryScript.VsCode.LanguageServer.csproj
+++ b/FryScript.VsCode/FryScript.VsCode.LanguageServer/FryScript.VsCode.LanguageServer.csproj
@@ -10,6 +10,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <WarningsAsErrors />
+    <OutputPath>..\FryScript.VsCode.Plugin\bin</OutputPath>
   </PropertyGroup>
 
   <ItemGroup>
