Update project to use latest FryScript, refactored server and program to use async

--- a/FryScript.VsCode/FryScript.VsCode.LanguageServer/FryScript.VsCode.LanguageServer.csproj
+++ b/FryScript.VsCode/FryScript.VsCode.LanguageServer/FryScript.VsCode.LanguageServer.csproj
@@ -14,6 +14,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FryScript-Experimental" Version="0.0.0-CI-20200504-095004" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
 
