--- a/FryScript.VsCode/FryScript.VsCode.LanguageServer/FryScript.VsCode.LanguageServer.csproj
+++ b/FryScript.VsCode/FryScript.VsCode.LanguageServer/FryScript.VsCode.LanguageServer.csproj
@@ -14,11 +14,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FryScript-Experimental" Version="0.0.0-CI-20200629-194904" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\..\..\FryScript\FryScript\FryScript\FryScript.csproj" />
   </ItemGroup>
 
 </Project>
